--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.4",
     "@unocss/preset-uno": "^66.0.0",
+    "@unocss/preset-web-fonts": "^66.0.0",
     "@unocss/transformer-directives": "^66.0.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/eslint-plugin": "1.1.31",
